2001-07-13  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/payables.scm: New file - an 
	"Accounts payable by creditor" report.

	* src/scm/date-utilities.scm: Added a couple
	more datedeltas.
	
	* src/scm/Makefile.am: update for new file.

2001-07-12  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.[hc]: same as below

	* src/SplitLedger.c: remove share balance cells, they are now
	redundant

	* accounts/*/*: currency->commodity

	* src/scm/engine-interface.scm: quantity->amount

	* src/guile/guile-util.[ch]: quantity->amount

	* src/guile/gnc.gwp: quantity->amount

	* src/SplitLedger.c: quantity->amount

	* src/gnc-ui-util.[ch]: quantity->amount

	* src/scm/report/transaction.scm: remove old api

	* src/scm/report-utilities.scm: remove old api

	* src/scm/commodity-utilities.scm: remove old api

	* src/scm/engine-interface.scm: remove old api

	* src/scm/extensions.scm: remove old api

	* src/scm/report-utilities.scm: remove old api

	* src/gnome/reconcile-list.c: remove old api

	* src/scm/report/register.scm: remove old api

	* src/engine/Scrub.c: remove old api

	* src/engine/sql/txn.c: remove old api

	* src/engine/rpc/RpcUtils.c: remove old api

	* src/guile/gnc.gwp: remove cruft

	* src/scm/extensions.scm: remove cruft

	* src/guile/gnc-helpers.[ch]: remove old api

	* src/engine/io-gncbin-r.c: remove old api

	* src/guile/gnc-helpers.c: remove old api

	* src/SplitLedger.c: remove old api

	* src/engine/Transaction.[ch]: remove share api and older api

	* src/engine/Transaction-xml-parser-v1.c: remove old api

	* src/gnome/druid-stock-split.c: remove share api

	* src/engine/Account.[ch]: remove 'share' api and other
	unused api.

	* src/scm/qif-import/qif-to-gnc.scm: remove share api

	* src/guile/gnc.gwp: remove share api

	* src/gnome/window-reconcile.c: remove share api

	* src/gnome/window-register.c: remove share api

2001-07-11  Dave Peticolas  <dave@krondo.com>

	* src/engine/io-gncxml-v2.c: same as below
